# django-international-sites

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  readme.md  setup.cfg  setup.py
international/: __init__.py  admin.py  apps.py  localize.py  middleware.py  models.py  urls.py  views.py
international/management/commands/: check_and_update_geoip2.py
international/migrations/: 0001_initial.py  0002_alter_countrysite_country_code.py  0003_alter_countrysite_default_language.py  0004_countrysite_icon.py  0005_auto_20210906_1542.py  0006_countrysite_active.py
international/sitemaps/: __init__.py  views.py
