[metadata]
name = django-international-sites
version = 0.1.0
description = Django to serve multiple sites/countries from a single application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/project-cece/django-international-sites
author = Marcella Wijngaarden
author_email = marcellawijngaarden@hotmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0
    geoip2
